@@ -13,4 +13,5 @@ v<0.0.3>, <11/17/2024> -- fix: automated release generation
 v<0.0.3>, <11/17/2024> -- feat: add max retries arg to openai encoder
 v<0.0.3>, <11/17/2024> -- feat: add client initialization to cohere encoder
 v<0.0.3>, <11/17/2024> -- feat: add mistral and voyageai encoders
-v<0.0.4>, <11/23/2024> -- chore: removed huggingface-hub, torch, transformers, and tokenizers from core dependencies
+v<0.0.4>, <11/24/2024> -- chore: removed huggingface-hub, torch, transformers, and tokenizers from core dependencies
+v<0.0.4>, <11/24/2024> -- refactor: improve package initialization with conditional imports for type checking
